objects/Team_Member__c.object
<CustomObject>
    <description>Created as part of the Events Management project</description>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <description>Created for CR-20150928-9276</description>
        <label>Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <description>Created for CR-20150928-9276</description>
        <label>Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of the Events Management project</description>
        <label>Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Team_Member__c</fullName>
        <description>Created as part of the Events Management project</description>
        <formula>Advisory_Event__r.Id +  Team_Member__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Confirmation_Num__c</fullName>
        <description>Created for CR-20150928-9276</description>
        <label>Hotel Confirmation #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of the Events Management project</description>
        <label>Location Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Series Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Role__c</fullName>
        <description>Created as part of the Events Management project</description>
        <label>Secondary Role</label>
        <picklist>
            <controllingField>Primary_Role__c</controllingField>
            <picklistValues>
                <fullName>Dinner Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Tag Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greeter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Staff_Rate__c</fullName>
        <description>Created for CR-20150928-9276</description>
        <label>Staff Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of the Events Management project</description>
        <label>Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of the Events Management project</description>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <label>Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Series</fullName>
        <active>true</active>
        <label>Series</label>
    </recordTypes>
    <recordTypes>
        <fullName>Session</fullName>
        <active>true</active>
        <label>Session</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Role_is_Required</fullName>
        <active>true</active>
        <description>Role is blank. Created as part of the Events Management project.</description>
        <errorConditionFormula>ISBLANK(TEXT(Primary_Role__c))</errorConditionFormula>
        <errorDisplayField>Primary_Role__c</errorDisplayField>
        <errorMessage>You must identify an option for this Team Member.</errorMessage>
    </validationRules>
</CustomObject>